// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconButtonCore kind:primary color:default size:medium light:false disabled 1`] = `
<div>
  <button
    aria-disabled="true"
    aria-label="search"
    class=""
    style="margin: -8px; position: relative; display: inline-flex; align-items: center; justify-content: center; box-sizing: border-box; padding: 0px; cursor: not-allowed; outline: none; text-decoration: none; background: none; height: 40px; width: 40px; color: rgba(33, 36, 44, 0.32); border-radius: 4px;"
    tabindex="-1"
    type="button"
  >
    <span
      class=""
      style="display: inline-block; vertical-align: text-bottom; flex-shrink: 0; flex-grow: 0; mask-size: 100%; mask-repeat: no-repeat; mask-position: center; background-color: currentColor; width: 24px; height: 24px; mask-image: url(magnifying-glass.svg);"
    />
  </button>
</div>
`;

exports[`IconButtonCore kind:primary color:default size:medium light:true disabled 1`] = `
<div>
  <button
    aria-disabled="true"
    aria-label="search"
    class=""
    style="margin: -8px; position: relative; display: inline-flex; align-items: center; justify-content: center; box-sizing: border-box; padding: 0px; cursor: not-allowed; outline: none; text-decoration: none; background: none; height: 40px; width: 40px; color: rgba(255, 255, 255, 0.5); border-radius: 4px;"
    tabindex="-1"
    type="button"
  >
    <span
      class=""
      style="display: inline-block; vertical-align: text-bottom; flex-shrink: 0; flex-grow: 0; mask-size: 100%; mask-repeat: no-repeat; mask-position: center; background-color: currentColor; width: 24px; height: 24px; mask-image: url(magnifying-glass.svg);"
    />
  </button>
</div>
`;

exports[`IconButtonCore kind:primary color:default size:small light:false disabled 1`] = `
<div>
  <button
    aria-disabled="true"
    aria-label="search"
    class=""
    style="margin: -8px; position: relative; display: inline-flex; align-items: center; justify-content: center; box-sizing: border-box; padding: 0px; cursor: not-allowed; outline: none; text-decoration: none; background: none; height: 32px; width: 32px; color: rgba(33, 36, 44, 0.32); border-radius: 4px;"
    tabindex="-1"
    type="button"
  >
    <span
      class=""
      style="display: inline-block; vertical-align: text-bottom; flex-shrink: 0; flex-grow: 0; mask-size: 100%; mask-repeat: no-repeat; mask-position: center; background-color: currentColor; width: 24px; height: 24px; mask-image: url(magnifying-glass.svg);"
    />
  </button>
</div>
`;

exports[`IconButtonCore kind:primary color:default size:small light:true disabled 1`] = `
<div>
  <button
    aria-disabled="true"
    aria-label="search"
    class=""
    style="margin: -8px; position: relative; display: inline-flex; align-items: center; justify-content: center; box-sizing: border-box; padding: 0px; cursor: not-allowed; outline: none; text-decoration: none; background: none; height: 32px; width: 32px; color: rgba(255, 255, 255, 0.5); border-radius: 4px;"
    tabindex="-1"
    type="button"
  >
    <span
      class=""
      style="display: inline-block; vertical-align: text-bottom; flex-shrink: 0; flex-grow: 0; mask-size: 100%; mask-repeat: no-repeat; mask-position: center; background-color: currentColor; width: 24px; height: 24px; mask-image: url(magnifying-glass.svg);"
    />
  </button>
</div>
`;

exports[`IconButtonCore kind:primary color:default size:xsmall light:false disabled 1`] = `
<div>
  <button
    aria-disabled="true"
    aria-label="search"
    class=""
    style="margin: -8px; position: relative; display: inline-flex; align-items: center; justify-content: center; box-sizing: border-box; padding: 0px; cursor: not-allowed; outline: none; text-decoration: none; background: none; height: 24px; width: 24px; color: rgba(33, 36, 44, 0.32); border-radius: 4px;"
    tabindex="-1"
    type="button"
  >
    <span
      class=""
      style="display: inline-block; vertical-align: text-bottom; flex-shrink: 0; flex-grow: 0; mask-size: 100%; mask-repeat: no-repeat; mask-position: center; background-color: currentColor; width: 16px; height: 16px; mask-image: url(magnifying-glass.svg);"
    />
  </button>
</div>
`;

exports[`IconButtonCore kind:primary color:default size:xsmall light:true disabled 1`] = `
<div>
  <button
    aria-disabled="true"
    aria-label="search"
    class=""
    style="margin: -8px; position: relative; display: inline-flex; align-items: center; justify-content: center; box-sizing: border-box; padding: 0px; cursor: not-allowed; outline: none; text-decoration: none; background: none; height: 24px; width: 24px; color: rgba(255, 255, 255, 0.5); border-radius: 4px;"
    tabindex="-1"
    type="button"
  >
    <span
      class=""
      style="display: inline-block; vertical-align: text-bottom; flex-shrink: 0; flex-grow: 0; mask-size: 100%; mask-repeat: no-repeat; mask-position: center; background-color: currentColor; width: 16px; height: 16px; mask-image: url(magnifying-glass.svg);"
    />
  </button>
</div>
`;

exports[`IconButtonCore kind:primary color:destructive size:medium light:false disabled 1`] = `
<div>
  <button
    aria-disabled="true"
    aria-label="search"
    class=""
    style="margin: -8px; position: relative; display: inline-flex; align-items: center; justify-content: center; box-sizing: border-box; padding: 0px; cursor: not-allowed; outline: none; text-decoration: none; background: none; height: 40px; width: 40px; color: rgba(33, 36, 44, 0.32); border-radius: 4px;"
    tabindex="-1"
    type="button"
  >
    <span
      class=""
      style="display: inline-block; vertical-align: text-bottom; flex-shrink: 0; flex-grow: 0; mask-size: 100%; mask-repeat: no-repeat; mask-position: center; background-color: currentColor; width: 24px; height: 24px; mask-image: url(magnifying-glass.svg);"
    />
  </button>
</div>
`;

exports[`IconButtonCore kind:primary color:destructive size:medium light:true disabled 1`] = `
<div>
  <button
    aria-disabled="true"
    aria-label="search"
    class=""
    style="margin: -8px; position: relative; display: inline-flex; align-items: center; justify-content: center; box-sizing: border-box; padding: 0px; cursor: not-allowed; outline: none; text-decoration: none; background: none; height: 40px; width: 40px; color: rgba(255, 255, 255, 0.5); border-radius: 4px;"
    tabindex="-1"
    type="button"
  >
    <span
      class=""
      style="display: inline-block; vertical-align: text-bottom; flex-shrink: 0; flex-grow: 0; mask-size: 100%; mask-repeat: no-repeat; mask-position: center; background-color: currentColor; width: 24px; height: 24px; mask-image: url(magnifying-glass.svg);"
    />
  </button>
</div>
`;

exports[`IconButtonCore kind:primary color:destructive size:small light:false disabled 1`] = `
<div>
  <button
    aria-disabled="true"
    aria-label="search"
    class=""
    style="margin: -8px; position: relative; display: inline-flex; align-items: center; justify-content: center; box-sizing: border-box; padding: 0px; cursor: not-allowed; outline: none; text-decoration: none; background: none; height: 32px; width: 32px; color: rgba(33, 36, 44, 0.32); border-radius: 4px;"
    tabindex="-1"
    type="button"
  >
    <span
      class=""
      style="display: inline-block; vertical-align: text-bottom; flex-shrink: 0; flex-grow: 0; mask-size: 100%; mask-repeat: no-repeat; mask-position: center; background-color: currentColor; width: 24px; height: 24px; mask-image: url(magnifying-glass.svg);"
    />
  </button>
</div>
`;

exports[`IconButtonCore kind:primary color:destructive size:small light:true disabled 1`] = `
<div>
  <button
    aria-disabled="true"
    aria-label="search"
    class=""
    style="margin: -8px; position: relative; display: inline-flex; align-items: center; justify-content: center; box-sizing: border-box; padding: 0px; cursor: not-allowed; outline: none; text-decoration: none; background: none; height: 32px; width: 32px; color: rgba(255, 255, 255, 0.5); border-radius: 4px;"
    tabindex="-1"
    type="button"
  >
    <span
      class=""
      style="display: inline-block; vertical-align: text-bottom; flex-shrink: 0; flex-grow: 0; mask-size: 100%; mask-repeat: no-repeat; mask-position: center; background-color: currentColor; width: 24px; height: 24px; mask-image: url(magnifying-glass.svg);"
    />
  </button>
</div>
`;

exports[`IconButtonCore kind:primary color:destructive size:xsmall light:false disabled 1`] = `
<div>
  <button
    aria-disabled="true"
    aria-label="search"
    class=""
    style="margin: -8px; position: relative; display: inline-flex; align-items: center; justify-content: center; box-sizing: border-box; padding: 0px; cursor: not-allowed; outline: none; text-decoration: none; background: none; height: 24px; width: 24px; color: rgba(33, 36, 44, 0.32); border-radius: 4px;"
    tabindex="-1"
    type="button"
  >
    <span
      class=""
      style="display: inline-block; vertical-align: text-bottom; flex-shrink: 0; flex-grow: 0; mask-size: 100%; mask-repeat: no-repeat; mask-position: center; background-color: currentColor; width: 16px; height: 16px; mask-image: url(magnifying-glass.svg);"
    />
  </button>
</div>
`;

exports[`IconButtonCore kind:primary color:destructive size:xsmall light:true disabled 1`] = `
<div>
  <button
    aria-disabled="true"
    aria-label="search"
    class=""
    style="margin: -8px; position: relative; display: inline-flex; align-items: center; justify-content: center; box-sizing: border-box; padding: 0px; cursor: not-allowed; outline: none; text-decoration: none; background: none; height: 24px; width: 24px; color: rgba(255, 255, 255, 0.5); border-radius: 4px;"
    tabindex="-1"
    type="button"
  >
    <span
      class=""
      style="display: inline-block; vertical-align: text-bottom; flex-shrink: 0; flex-grow: 0; mask-size: 100%; mask-repeat: no-repeat; mask-position: center; background-color: currentColor; width: 16px; height: 16px; mask-image: url(magnifying-glass.svg);"
    />
  </button>
</div>
`;

exports[`IconButtonCore kind:secondary color:default size:medium light:false disabled 1`] = `
<div>
  <button
    aria-disabled="true"
    aria-label="search"
    class=""
    style="margin: -8px; position: relative; display: inline-flex; align-items: center; justify-content: center; box-sizing: border-box; padding: 0px; cursor: not-allowed; outline: none; text-decoration: none; background: none; height: 40px; width: 40px; color: rgba(33, 36, 44, 0.32); border-radius: 4px;"
    tabindex="-1"
    type="button"
  >
    <span
      class=""
      style="display: inline-block; vertical-align: text-bottom; flex-shrink: 0; flex-grow: 0; mask-size: 100%; mask-repeat: no-repeat; mask-position: center; background-color: currentColor; width: 24px; height: 24px; mask-image: url(magnifying-glass.svg);"
    />
  </button>
</div>
`;

exports[`IconButtonCore kind:secondary color:default size:small light:false disabled 1`] = `
<div>
  <button
    aria-disabled="true"
    aria-label="search"
    class=""
    style="margin: -8px; position: relative; display: inline-flex; align-items: center; justify-content: center; box-sizing: border-box; padding: 0px; cursor: not-allowed; outline: none; text-decoration: none; background: none; height: 32px; width: 32px; color: rgba(33, 36, 44, 0.32); border-radius: 4px;"
    tabindex="-1"
    type="button"
  >
    <span
      class=""
      style="display: inline-block; vertical-align: text-bottom; flex-shrink: 0; flex-grow: 0; mask-size: 100%; mask-repeat: no-repeat; mask-position: center; background-color: currentColor; width: 24px; height: 24px; mask-image: url(magnifying-glass.svg);"
    />
  </button>
</div>
`;

exports[`IconButtonCore kind:secondary color:default size:xsmall light:false disabled 1`] = `
<div>
  <button
    aria-disabled="true"
    aria-label="search"
    class=""
    style="margin: -8px; position: relative; display: inline-flex; align-items: center; justify-content: center; box-sizing: border-box; padding: 0px; cursor: not-allowed; outline: none; text-decoration: none; background: none; height: 24px; width: 24px; color: rgba(33, 36, 44, 0.32); border-radius: 4px;"
    tabindex="-1"
    type="button"
  >
    <span
      class=""
      style="display: inline-block; vertical-align: text-bottom; flex-shrink: 0; flex-grow: 0; mask-size: 100%; mask-repeat: no-repeat; mask-position: center; background-color: currentColor; width: 16px; height: 16px; mask-image: url(magnifying-glass.svg);"
    />
  </button>
</div>
`;

exports[`IconButtonCore kind:secondary color:destructive size:medium light:false disabled 1`] = `
<div>
  <button
    aria-disabled="true"
    aria-label="search"
    class=""
    style="margin: -8px; position: relative; display: inline-flex; align-items: center; justify-content: center; box-sizing: border-box; padding: 0px; cursor: not-allowed; outline: none; text-decoration: none; background: none; height: 40px; width: 40px; color: rgba(33, 36, 44, 0.32); border-radius: 4px;"
    tabindex="-1"
    type="button"
  >
    <span
      class=""
      style="display: inline-block; vertical-align: text-bottom; flex-shrink: 0; flex-grow: 0; mask-size: 100%; mask-repeat: no-repeat; mask-position: center; background-color: currentColor; width: 24px; height: 24px; mask-image: url(magnifying-glass.svg);"
    />
  </button>
</div>
`;

exports[`IconButtonCore kind:secondary color:destructive size:small light:false disabled 1`] = `
<div>
  <button
    aria-disabled="true"
    aria-label="search"
    class=""
    style="margin: -8px; position: relative; display: inline-flex; align-items: center; justify-content: center; box-sizing: border-box; padding: 0px; cursor: not-allowed; outline: none; text-decoration: none; background: none; height: 32px; width: 32px; color: rgba(33, 36, 44, 0.32); border-radius: 4px;"
    tabindex="-1"
    type="button"
  >
    <span
      class=""
      style="display: inline-block; vertical-align: text-bottom; flex-shrink: 0; flex-grow: 0; mask-size: 100%; mask-repeat: no-repeat; mask-position: center; background-color: currentColor; width: 24px; height: 24px; mask-image: url(magnifying-glass.svg);"
    />
  </button>
</div>
`;

exports[`IconButtonCore kind:secondary color:destructive size:xsmall light:false disabled 1`] = `
<div>
  <button
    aria-disabled="true"
    aria-label="search"
    class=""
    style="margin: -8px; position: relative; display: inline-flex; align-items: center; justify-content: center; box-sizing: border-box; padding: 0px; cursor: not-allowed; outline: none; text-decoration: none; background: none; height: 24px; width: 24px; color: rgba(33, 36, 44, 0.32); border-radius: 4px;"
    tabindex="-1"
    type="button"
  >
    <span
      class=""
      style="display: inline-block; vertical-align: text-bottom; flex-shrink: 0; flex-grow: 0; mask-size: 100%; mask-repeat: no-repeat; mask-position: center; background-color: currentColor; width: 16px; height: 16px; mask-image: url(magnifying-glass.svg);"
    />
  </button>
</div>
`;

exports[`IconButtonCore kind:tertiary color:default size:medium light:false disabled 1`] = `
<div>
  <button
    aria-disabled="true"
    aria-label="search"
    class=""
    style="margin: -8px; position: relative; display: inline-flex; align-items: center; justify-content: center; box-sizing: border-box; padding: 0px; cursor: not-allowed; outline: none; text-decoration: none; background: none; height: 40px; width: 40px; color: rgba(33, 36, 44, 0.32); border-radius: 4px;"
    tabindex="-1"
    type="button"
  >
    <span
      class=""
      style="display: inline-block; vertical-align: text-bottom; flex-shrink: 0; flex-grow: 0; mask-size: 100%; mask-repeat: no-repeat; mask-position: center; background-color: currentColor; width: 24px; height: 24px; mask-image: url(magnifying-glass.svg);"
    />
  </button>
</div>
`;

exports[`IconButtonCore kind:tertiary color:default size:small light:false disabled 1`] = `
<div>
  <button
    aria-disabled="true"
    aria-label="search"
    class=""
    style="margin: -8px; position: relative; display: inline-flex; align-items: center; justify-content: center; box-sizing: border-box; padding: 0px; cursor: not-allowed; outline: none; text-decoration: none; background: none; height: 32px; width: 32px; color: rgba(33, 36, 44, 0.32); border-radius: 4px;"
    tabindex="-1"
    type="button"
  >
    <span
      class=""
      style="display: inline-block; vertical-align: text-bottom; flex-shrink: 0; flex-grow: 0; mask-size: 100%; mask-repeat: no-repeat; mask-position: center; background-color: currentColor; width: 24px; height: 24px; mask-image: url(magnifying-glass.svg);"
    />
  </button>
</div>
`;

exports[`IconButtonCore kind:tertiary color:default size:xsmall light:false disabled 1`] = `
<div>
  <button
    aria-disabled="true"
    aria-label="search"
    class=""
    style="margin: -8px; position: relative; display: inline-flex; align-items: center; justify-content: center; box-sizing: border-box; padding: 0px; cursor: not-allowed; outline: none; text-decoration: none; background: none; height: 24px; width: 24px; color: rgba(33, 36, 44, 0.32); border-radius: 4px;"
    tabindex="-1"
    type="button"
  >
    <span
      class=""
      style="display: inline-block; vertical-align: text-bottom; flex-shrink: 0; flex-grow: 0; mask-size: 100%; mask-repeat: no-repeat; mask-position: center; background-color: currentColor; width: 16px; height: 16px; mask-image: url(magnifying-glass.svg);"
    />
  </button>
</div>
`;

exports[`IconButtonCore kind:tertiary color:destructive size:medium light:false disabled 1`] = `
<div>
  <button
    aria-disabled="true"
    aria-label="search"
    class=""
    style="margin: -8px; position: relative; display: inline-flex; align-items: center; justify-content: center; box-sizing: border-box; padding: 0px; cursor: not-allowed; outline: none; text-decoration: none; background: none; height: 40px; width: 40px; color: rgba(33, 36, 44, 0.32); border-radius: 4px;"
    tabindex="-1"
    type="button"
  >
    <span
      class=""
      style="display: inline-block; vertical-align: text-bottom; flex-shrink: 0; flex-grow: 0; mask-size: 100%; mask-repeat: no-repeat; mask-position: center; background-color: currentColor; width: 24px; height: 24px; mask-image: url(magnifying-glass.svg);"
    />
  </button>
</div>
`;

exports[`IconButtonCore kind:tertiary color:destructive size:small light:false disabled 1`] = `
<div>
  <button
    aria-disabled="true"
    aria-label="search"
    class=""
    style="margin: -8px; position: relative; display: inline-flex; align-items: center; justify-content: center; box-sizing: border-box; padding: 0px; cursor: not-allowed; outline: none; text-decoration: none; background: none; height: 32px; width: 32px; color: rgba(33, 36, 44, 0.32); border-radius: 4px;"
    tabindex="-1"
    type="button"
  >
    <span
      class=""
      style="display: inline-block; vertical-align: text-bottom; flex-shrink: 0; flex-grow: 0; mask-size: 100%; mask-repeat: no-repeat; mask-position: center; background-color: currentColor; width: 24px; height: 24px; mask-image: url(magnifying-glass.svg);"
    />
  </button>
</div>
`;

exports[`IconButtonCore kind:tertiary color:destructive size:xsmall light:false disabled 1`] = `
<div>
  <button
    aria-disabled="true"
    aria-label="search"
    class=""
    style="margin: -8px; position: relative; display: inline-flex; align-items: center; justify-content: center; box-sizing: border-box; padding: 0px; cursor: not-allowed; outline: none; text-decoration: none; background: none; height: 24px; width: 24px; color: rgba(33, 36, 44, 0.32); border-radius: 4px;"
    tabindex="-1"
    type="button"
  >
    <span
      class=""
      style="display: inline-block; vertical-align: text-bottom; flex-shrink: 0; flex-grow: 0; mask-size: 100%; mask-repeat: no-repeat; mask-position: center; background-color: currentColor; width: 16px; height: 16px; mask-image: url(magnifying-glass.svg);"
    />
  </button>
</div>
`;
